--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,7 @@
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
+            "@php artisan key:generate --ansi","php artisan clear-compiled","php aritsan optimize","chmod -R 777 public/"
         ]
     }
 }
