--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -56,7 +57,10 @@
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate --ansi","php artisan clear-compiled","php aritsan optimize","chmod -R 777 public/"
+            "@php artisan key:generate --ansi",
+            "php artisan clear-compiled",
+            "php aritsan optimize",
+            "chmod -R 777 public/"
         ]
     }
 }
