--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5",
+        "phpspec/prophecy": "~1.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -36,7 +37,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Larabeers\\": "Larabeers/"
         },
         "classmap": [
             "database/seeds",
