--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-fileinfo": "*",
+        "ext-json": "*",
+        "ext-mbstring": "*",
         "fideloper/proxy": "^4.0",
+        "google/apiclient": "^2.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "*",
-        "ext-mbstring": "*",
-        "ext-json": "*",
-        "ext-fileinfo": "*"
+        "laravelcollective/html": "*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
