--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "google/apiclient": "^2.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "*"
+        "laravelcollective/html": "*",
+        "ext-gd": "*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
