--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,15 @@
     "require": {
         "php": "^7.1.3",
         "ext-fileinfo": "*",
+        "ext-gd": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
+        "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
         "google/apiclient": "^2.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "*",
-        "ext-gd": "*"
+        "laravelcollective/html": "*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
