--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^7.5",
-        "phpspec/prophecy": "~1.0"
+        "phpspec/prophecy": "~1.0",
+        "squizlabs/php_codesniffer": "3.*"
     },
     "config": {
         "optimize-autoloader": true,
